# AutoAchromat

./: .gitignore  AutoAchromat-Code-Review.md  README.md  config_example.json  environment.yml  gui.py  pyproject.toml  report.md  requirements.txt  results.json  run.py
.claude/: settings.local.json
configs/: example_config.json
data/catalogs/: SCHOTT.AGF
glass_database/: CDGM.AGF  OHARA.agf
output/: report.md  resolved_config.json  results_table.csv
report/: Academic-Report.md  Academic_Report.md  AutoAchromat-Code-Review.md  AutoAchromat_Report.md
scripts/: smoke_test_bridge.py
src/: __init__.py  cli.py  io.py  model.py  score.py  synthesis.py
src/autoachromat/: __init__.py  cemented.py  cli.py  glass_reader.py  gui.py  models.py  optics.py  pipeline.py  seidel_refine.py  spaced.py  thermal.py  thickening.py  zemax_export.py
src/autoachromat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/autoachromat/__pycache__/: cli.cpython-313.pyc.1600019963312  cli.cpython-313.pyc.2810771437360  spaced.cpython-313.pyc.1600019965360
src/autoachromat/optiland_bridge/: __init__.py  builder.py  evaluator.py  optimizer.py  test_bridge.py
src/raytrace/: __init__.py  optiland_interface.py
tests/: __init__.py  test.ipynb  test_contracts.py  test_io.py  test_refactoring.py  test_seidel_refine.py  test_thermal.py  test_thickness.py
