[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoachromat"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "optiland",
    "scipy",
]

[project.scripts]
autoachromat = "autoachromat.cli:main"
autoachromat-gui = "autoachromat.gui:main"

[dependency-groups]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
